Add logged in user name to nav bar

--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -32,6 +32,15 @@
 .alignleft {
     float: left;
   }
+/*-----------Logged In User Styling-------*/
+.loggedIn span{
+  position: absolute;
+  margin-top:20px;
+  z-index:1;
+  display: inline-block;
+  font-family: 'Montserrat', serif;
+  vertical-align: center;
+}
 /*------------Add Pagination Buttons------*/
 .pages ul li{
    display: table-cell;
