--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -144,7 +144,20 @@
     display:block;
     margin:auto;
     padding-top: 30%;
-    width: 80%;
+    height: 20%
+    width: 20%;
+  }
+
+  .tag {
+    float: center;
+    margin: auto;
+    padding-top: 20%;
+  }
+
+  .mission {
+    float: center;
+    margin: auto;
+    padding-top: 10%;
   }
 
   /* ---- Home Page Styles ---- */
@@ -746,7 +759,7 @@
     display:block;
     margin:auto;
     padding-top: 30%;
-    width: 80%;
+    width: 25%;
   }
 
   /* ---- Home Page Styles ---- */
@@ -1307,7 +1320,7 @@
     display:block;
     margin:auto;
     padding-top: 30%;
-    width: 80%;
+    width: 25%;
   }
 
   /* ---- Home Page Styles ---- */
@@ -1864,10 +1877,53 @@
   }
 
   .loginImg img{
-    width: 40%;
+    width: 25%;
     display:block;
     padding: 50px 0px 15px 0px;
     margin:auto;
+  }
+
+  .tagLine {
+    display: block;
+    /*margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;*/
+    margin-left: 38%;
+    margin-right: 35%;
+    font-weight: bold;
+    font-size: 1.777em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
+  }
+
+  .mission {
+    display:block;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    margin-left: 35%;
+    margin-right: 35%;
+    /*margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;*/
+    font-family: 'Montserrat', serif;
+  }
+
+  .learnMore {
+    display: block;
+    /*margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;*/
+    margin-left: 38%;
+    margin-right: 35%;
+    font-weight: bold;
+    font-size: 1.777em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
   }
 
   /* ---- About Page Styles ---- */
