--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -148,16 +148,37 @@
     width: 20%;
   }
 
-  .tag {
-    float: center;
-    margin: auto;
-    padding-top: 20%;
+  .tagLine {
+    display: block;
+    text-align: center;
+    /*margin-left: 38%;
+    margin-right: 35%;*/
+    margin: center;
+    font-weight: bold;
+    font-size: 1.777em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
   }
 
   .mission {
-    float: center;
+    display:block;
+    text-align: center;
     margin: auto;
-    padding-top: 10%;
+    /*margin-left: 35%;
+    margin-right: 35%;*/
+    font-family: 'Montserrat', serif;
+  }
+
+  .learnMore {
+    display: block;
+    margin-top: 1em;
+    margin-left: 47.5%;
+    margin-right: 35%;
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: 1.25em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
   }
 
   /* ---- Home Page Styles ---- */
@@ -762,6 +783,41 @@
     width: 25%;
   }
 
+  .tagLine {
+    display: block;
+    text-align: center;
+    margin-left: 38%;
+    margin-right: 35%;
+    font-weight: bold;
+    font-size: 1.777em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
+  }
+
+  .mission {
+    display:block;
+    text-align: center;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    margin-left: 35%;
+    margin-right: 35%;
+    font-family: 'Montserrat', serif;
+  }
+
+  .learnMore {
+    display: block;
+    margin-top: 1em;
+    margin-left: 47.5%;
+    margin-right: 35%;
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: 1.25em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
+  }
+
   /* ---- Home Page Styles ---- */
   .home {
     margin-left: 0%;
@@ -1320,7 +1376,42 @@
     display:block;
     margin:auto;
     padding-top: 30%;
-    width: 25%;
+    width: 30%;
+  }
+
+  .tagLine {
+    display: block;
+    text-align: center;
+    margin-left: 38%;
+    margin-right: 35%;
+    font-weight: bold;
+    font-size: 1.777em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
+  }
+
+  .mission {
+    display:block;
+    text-align: center;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    margin-left: 35%;
+    margin-right: 35%;
+    font-family: 'Montserrat', serif;
+  }
+
+  .learnMore {
+    display: block;
+    margin-top: 1em;
+    margin-left: 47.5%;
+    margin-right: 35%;
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: 1.25em;
+    line-height: 1.2em;
+    font-family: 'Montserrat', serif;
   }
 
   /* ---- Home Page Styles ---- */
@@ -1885,10 +1976,7 @@
 
   .tagLine {
     display: block;
-    /*margin-top: 0px;
-    margin-right: auto;
-    margin-bottom: 0px;
-    margin-left: auto;*/
+    text-align: center;
     margin-left: 38%;
     margin-right: 35%;
     font-weight: bold;
@@ -1899,29 +1987,20 @@
 
   .mission {
     display:block;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
+    text-align: center;
     margin-left: 35%;
     margin-right: 35%;
-    /*margin-top: 0px;
-    margin-right: auto;
-    margin-bottom: 0px;
-    margin-left: auto;*/
     font-family: 'Montserrat', serif;
   }
 
   .learnMore {
     display: block;
-    /*margin-top: 0px;
-    margin-right: auto;
-    margin-bottom: 0px;
-    margin-left: auto;*/
-    margin-left: 38%;
+    margin-top: 1em;
+    margin-left: 47.5%;
     margin-right: 35%;
     font-weight: bold;
-    font-size: 1.777em;
+    text-decoration: underline;
+    font-size: 1.25em;
     line-height: 1.2em;
     font-family: 'Montserrat', serif;
   }
