--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -136,6 +136,7 @@
     font-size: 16px;
     font-weight: bold;
     margin:auto;
+    margin-top: 15px;
     width: 50%;
     height: 40px;
     border-radius: 10px;
@@ -775,6 +776,7 @@
     display:block;
     font-size: 12px;
     font-weight: bold;
+    margin-top: 15px;
     margin:auto;
     width: 50%;
     height: 35px;
@@ -1373,6 +1375,7 @@
     display:block;
     font-size: 16px;
     font-weight: bold;
+    margin-top: 15px;
     margin:auto;
     width: 50%;
     height: 40px;
@@ -1960,7 +1963,6 @@
     height: 38px;
     font-size: 16px;
     font-weight: bold;
-    margin:auto;
     margin: auto;
     margin-top:15px;
     width: 210px;
@@ -1973,7 +1975,8 @@
     font-size: 16px;
     font-weight: bold;
     height: 38px;
-    margin:auto;
+    margin: auto;
+    margin-top: 15px;
     width: 210px;
   }
 
