Fix nav-bar flashing bug

--- a/src/client/styles/style.css
+++ b/src/client/styles/style.css
@@ -1,4 +1,8 @@
 /* ===== == = === Base Styles === = == ===== */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none;
+}
+
 .fade {
     position: relative;
     /*top: 0;
